--- a/Application.Desktop/App.xaml
+++ b/Application.Desktop/App.xaml
@@ -4,6 +4,47 @@
              xmlns:local="clr-namespace:Application.Desktop"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="TextBox">
+            <Setter Property="FontSize" Value="14"/>
+        </Style>
+        <!-- Header -->
+        <Style TargetType="Button">
+            <Style.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="5" />
+                </Style>
+            </Style.Resources>
+            <Setter Property="Width" Value="180"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="BorderBrush" Value="{x:Null}"/>
+        </Style>
+        <!-- ButtonFind Header -->
+
+        <Style x:Key="buttonFind" TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+            <Setter Property="Background" Value="#FF4FB6CA"/>
+            <Setter Property="Height" Value="50"/>
+
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="Foreground" Value="White"/>
+        </Style>
+
+        <Style x:Key="logo">
+            <Setter Property="Control.Height" Value="65"></Setter>
+            <Setter Property="Control.Margin" Value="30,0,10,0"></Setter>
+        </Style>
+
+        <Style x:Key="admin" >
+            <Setter Property="Control.Height" Value="65"></Setter>
+            <Setter Property="Control.Margin" Value="30,0,30,0"></Setter>
+        </Style>
+
+        <Style x:Key="buttonCallBack" TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+            <Setter Property="Background" Value="#FFE477"/>
+            <Setter Property="Height" Value="32"/>
+            <Setter Property="Margin" Value="0,1,0,0"/>
+
+        </Style>
+
     </Application.Resources>
+    
 </Application>
