--- a/Application.Web.Client/_Imports.razor
+++ b/Application.Web.Client/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using Application.Web.Client
 @using Application.Web.Client.Shared
+@using Application.Web.Client.Services;
+@using Microsoft.AspNetCore.Authorization;
+@using Application.Authorize.Utils;
