Добавил библиотеки в _Imports.razor*

--- a/Application.Web.Client/_Imports.razor
+++ b/Application.Web.Client/_Imports.razor
@@ -11,3 +11,7 @@
 @using Application.Web.Client.Services;
 @using Microsoft.AspNetCore.Authorization;
 @using Application.Authorize.Utils;
+@using Application.Web.Client.Models;
+@using System.Web
+@using System.Security.Claims
+@using Microsoft.AspNetCore.Components.Authorization;
