--- a/Application.Web.Client/Shared/MainLayout.razor
+++ b/Application.Web.Client/Shared/MainLayout.razor
@@ -6,9 +6,40 @@
     </div>
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
+        <AuthorizeView>
+            <Authorized>
+                <li class="nav-item p-0">
+                    <NavLink class="nav-link" href="#">
+                        <span class="p-2">
+                            Hello, @context.User.Identity.Name!
+                        </span>
+                    </NavLink>
+                </li>
+                <li class="nav-item p-0">
+                    <NavLink class="nav-link" href="logout">
+                        <span class="p-2">
+                            Logout
+                        </span>
+                    </NavLink>
+                </li>
+            </Authorized>
+            <NotAuthorized>
+                <li class="nav-item p-0">
+                    <NavLink class="nav-link" href="registration">
+                        <span class="p-2">
+                            Register
+                        </span>
+                    </NavLink>
+                </li>
+                <li class="nav-item p-0">
+                    <NavLink class="nav-link" href="login">
+                        <span class="p-2">
+                            Login
+                        </span>
+                    </NavLink>
+                </li>
+            </NotAuthorized>
+        </AuthorizeView>
 
         <article class="content px-4">
             @Body
