--- a/Application.Web.Client/_Imports.razor
+++ b/Application.Web.Client/_Imports.razor
@@ -15,3 +15,4 @@
 @using System.Web
 @using System.Security.Claims
 @using Microsoft.AspNetCore.Components.Authorization;
+@using Application.Web.Client.Pages.Authentication
