--- a/Application.WebClient/PageComponents/MultipleSelector.razor
+++ b/Application.WebClient/PageComponents/MultipleSelector.razor
@@ -1,4 +1,4 @@
-﻿@using GameIndustry_v2.Helpers
+﻿@using Application.WebClient.Helpers
 <div class="row">
     <ul class="list-group mr-4 selectable-list">
         @foreach (var item in OnNotSelected)
