Добавил страницы в NavMenu

--- a/Application.WebClient/Shared/NavMenu.razor
+++ b/Application.WebClient/Shared/NavMenu.razor
@@ -7,22 +7,72 @@
     </div>
 </div>
 
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
+<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+            <NavLink class="nav-link" href="">
+                <span class="oi oi-infinity" aria-hidden="true"></span> Profile
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
+            <AuthorizeView Roles="Admin,User,Studio">
+                <NotAuthorized>
+
+                </NotAuthorized>
+                <Authorized>
+                    <NavLink class="nav-link" href="home" Match="NavLinkMatch.All">
+                        <span class="oi oi-home" aria-hidden="true"></span> Home
+                    </NavLink>
+                </Authorized>
+            </AuthorizeView>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
+            <AuthorizeView Roles="Admin">
+                <NotAuthorized>
+
+                </NotAuthorized>
+                <Authorized>
+                    <NavLink class="nav-link" href="genres">
+                        <span class="oi oi-aperture" aria-hidden="true"></span> Genre
+                    </NavLink>
+                </Authorized>
+            </AuthorizeView>
+        </div>
+        <div class="nav-item px-3">
+            <AuthorizeView Roles="Admin,Studio">
+                <NotAuthorized>
+
+                </NotAuthorized>
+                <Authorized>
+                    <NavLink class="nav-link" href="studio">
+                        <span class="oi oi-action-redo" aria-hidden="true"></span> Studio
+                    </NavLink>
+                </Authorized>
+            </AuthorizeView>
+        </div>
+        <div class="nav-item px-3">
+            <AuthorizeView Roles="Admin,Studio,User">
+                <NotAuthorized>
+
+                </NotAuthorized>
+                <Authorized>
+                    <NavLink class="nav-link" href="games/search">
+                        <span class="oi oi-signal" aria-hidden="true"></span> Game Search
+                    </NavLink>
+                </Authorized>
+            </AuthorizeView>
+        </div>
+        <div class="nav-item px-3">
+            <AuthorizeView Roles="Admin,Studio">
+                <NotAuthorized>
+
+                </NotAuthorized>
+                <Authorized>
+                    <NavLink class="nav-link" href="games/create">
+                        <span class="oi oi-puzzle-piece" aria-hidden="true"></span> Create New Game
+                    </NavLink>
+                </Authorized>
+            </AuthorizeView>
         </div>
     </nav>
 </div>
