--- a/Application.WebClient/PageComponents/DeveloperPageForm.razor
+++ b/Application.WebClient/PageComponents/DeveloperPageForm.razor
@@ -1,17 +1,17 @@
-﻿@using Application.Persistence.Models
+﻿@using Application.Database.Models
 <EditForm Model="Developer" OnValidSubmit="OnValidSubmitHandler">
     <div class="form-group">
         <label>Developer Name: </label>
         <div>
-            <InputText class="form-control" @bind-Value="Developer.Name"/>
-            <ValidationMessage For="(()=>Developer.Name)"/>
+            <InputText class="form-control" @bind-Value="Developer.Fio"/>
+            <ValidationMessage For="(()=>Developer.Fio)"/>
         </div>
     </div>
     
     <InputImage Label="Image" OnImageFileSelected="ImageFileSelectedHandler" ImageUrl="@imageUrl"/>
     
     <div class="form-group form-markdown">
-        <MarkdownInput @bind-Value="Developer.StudioDescription" Label="Description" OnFor="(() => Developer.StudioDescription)"/>
+        <MarkdownInput @bind-Value="Developer.Standing" Label="Description" OnFor="(() => Developer.Standing)" />
     </div>
 
     <button type="submit" class="btn btn-primary">Create New Studio</button>
@@ -19,7 +19,7 @@
 
 @code {
     [Parameter]
-    public GameDeveloper Developer { get; set; }
+    public TourOperator Developer { get; set; }
 
     [Parameter]
     public EventCallback OnValidSubmitHandler { get; set; }
