--- a/Application.WebClient/PageComponents/IndividualGame.razor
+++ b/Application.WebClient/PageComponents/IndividualGame.razor
@@ -1,9 +1,8 @@
 ﻿@using System.Text.RegularExpressions
-@using Application.Persistence.Models
 
 <div class="col-sm-12 col-md-4 p-3 text-center">
     <div class="game-name">
-        <a href="@url">@Game.Name</a>
+        <a href="@url">@Game.TourName</a>
     </div>
 
     <hr class="hrfix" />
@@ -16,7 +15,7 @@
             }
             else
             {
-                <img src="@Game.Image" alt="@Game.Name" class="game-image" />
+                <img src="@Game.Image" alt="@Game.TourName" class="game-image" />
             }
         </a>
     </div>
@@ -44,18 +43,18 @@
 @code {
 
     [Parameter]
-    public GameModel Game { get; set; }
+    public Tour Game { get; set; }
     [Parameter]
-    public EventCallback<GameModel> OnDeleteGame { get; set; }
+    public EventCallback<Tour> OnDeleteGame { get; set; }
     [Parameter]
-    public EventCallback<GameModel> OnEditGame { get; set; }
+    public EventCallback<Tour> OnEditGame { get; set; }
 
     string url = string.Empty;
 
     protected override void OnInitialized()
     {
         //url = $"games/{Game.Id}/{Game.Name.Replace(" ", "-")}";
-        url = $"games/{Game.Id}/{Uri.EscapeDataString(Game.Name)}";
+        url = $"games/{Game.TourId}/{Uri.EscapeDataString(Game.TourName)}";
     }
 
     bool IsBase64(string value)
