--- a/Application.Web.Client/Shared/MainLayout.razor
+++ b/Application.Web.Client/Shared/MainLayout.razor
@@ -1,6 +1,8 @@
-﻿@inherits LayoutComponentBase
+﻿@using Application.WebClient.Data.Authentication
+@inject WebsiteAuthenticator WebsiteAuthenticator
+@inherits LayoutComponentBase
 
-<PageTitle>Application.Web.Client</PageTitle>
+<PageTitle>Tourist Agency</PageTitle>
 
 <div class="page">
     <div class="sidebar">
@@ -17,3 +19,11 @@
         </article>
     </main>
 </div>
+
+@code
+{
+    //private async Task TryLogout()
+    //{
+    //    await WebsiteAuthenticator.LogoutAsync();
+    //}
+}
