--- a/Application.Web.Client/_Imports.razor
+++ b/Application.Web.Client/_Imports.razor
@@ -1,6 +1,5 @@
 ﻿@using System.Net.Http
-@using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Components.Authorization
+@using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -8,3 +7,4 @@
 @using Microsoft.JSInterop
 @using Application.Web.Client
 @using Application.Web.Client.Shared
+@using Application.Database.Models
