PageComponent, Библиотеки, Настройка БД

--- a/Application.WebClient/Shared/AccoutManagement.razor
+++ b/Application.WebClient/Shared/AccoutManagement.razor
@@ -1,4 +1,4 @@
-﻿@using Application.Web.Client.Data.Authentication;
+﻿@using Application.WebClient.Data.Authentication;
 @using Application.Database.Models
 @inject IMessageService _message
 @inject WebsiteAuthenticator WebsiteAuthenticator
