--- a/Application.WebClient/Shared/MainLayout.razor
+++ b/Application.WebClient/Shared/MainLayout.razor
@@ -1,5 +1,4 @@
-﻿@using Application.Web.Client.Data.Authentication
-@using Application.Web.Client.Data.Authentication
+﻿@using Application.WebClient.Data.Authentication
 @inject WebsiteAuthenticator WebsiteAuthenticator
 @inherits LayoutComponentBase
 
@@ -23,8 +22,8 @@
 
 @code
 {
-    private async Task TryLogout()
-    {
-        await WebsiteAuthenticator.LogoutAsync();
-    }
+    //private async Task TryLogout()
+    //{
+    //    await WebsiteAuthenticator.LogoutAsync();
+    //}
 }
