--- a/Application.Web.Client/_Imports.razor
+++ b/Application.Web.Client/_Imports.razor
@@ -8,3 +8,4 @@
 @using Application.Web.Client
 @using Application.Web.Client.Shared
 @using Application.Database.Models
+@using Application.Database
