--- a/Application.Web.Client/Pages/Error.cshtml
+++ b/Application.Web.Client/Pages/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model GameIndustry_v2.Pages.ErrorModel
+@model Application.Web.Client.Pages.ErrorModel
 
 <!DOCTYPE html>
 <html lang="en">
