--- a/Application.Web.Client/Pages/GenrePages/EditGenre.razor
+++ b/Application.Web.Client/Pages/GenrePages/EditGenre.razor
@@ -1,5 +1,5 @@
 ﻿@page "/genres/edit/{GenreId:int}"
-@using Application.Persistence.Models
+@using Application.Web.Client.Data.Repository
 @inject IRepository _db
 
 <div class="row">
@@ -28,10 +28,10 @@
             {
                 <div class="row justify-content-lg-between m-1 text-white">
                     <div class="col-6 bg-primary">
-                        ID: @item.Id
+                        ID: @item.TransportId
                     </div>
                     <div class="col-6 bg-info">
-                        Name: @item.Name
+                        Name: @item.TypeOfTransport
                     </div>
                 </div>
             }
@@ -43,10 +43,10 @@
     [Parameter]
     public int GenreId { get; set; }
 
-    Genre genre;
+    Transport genre;
     string message = string.Empty;
     string cssClass = string.Empty;
-    List<Genre> allGenres = new();
+    List<Transport> allGenres = new();
 
     protected override void OnInitialized()
     {
