--- a/Application.Web.Client/Pages/_Host.cshtml
+++ b/Application.Web.Client/Pages/_Host.cshtml
@@ -1,5 +1,7 @@
 ﻿@page "/"
-@namespace GameIndustry_v2.Pages
+@using Application.Web.Client
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@namespace Application.Web.Client.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
