--- a/Application.Web.Client/Pages/_Layout.cshtml
+++ b/Application.Web.Client/Pages/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
-@namespace GameIndustry_v2.Pages
+@namespace Application.Web.Client.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
@@ -10,7 +10,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="GameIndustry_v2.styles.css" rel="stylesheet" />
+  @*  <link href="Application.Web.Client.styles.css" rel="stylesheet" />*@
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
