--- a/Application.Web.Client/Shared/AccoutManagement.razor
+++ b/Application.Web.Client/Shared/AccoutManagement.razor
@@ -117,7 +117,7 @@
                                 <h3>@User.Username</h3>
                             }
                             <small class="label label-warning">Российская Федерация</small>
-                            <p>Я простой Русский пацан и мне всё по барабану.</p>
+                            <p>Пока тестовое описание(в будущем что нибудь запарсить)</p>
                             <p class="sosmed-author">
                                 <a href="#"><i class="fa fa-facebook" title="Facebook"></i></a>
                                 <a href="#"><i class="fa fa-twitter" title="Twitter"></i></a>
