--- a/Application.Web.Client/Pages/GenrePages/CreateGenre.razor
+++ b/Application.Web.Client/Pages/GenrePages/CreateGenre.razor
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col">
-        <h1 class="text-info">Create Genre</h1>
+        <h1 class="text-info">Add Transport</h1>
     </div>
 </div>
 <div class="row">
