--- a/Application.Web.Client/Pages/GenrePages/IndexGenre.razor
+++ b/Application.Web.Client/Pages/GenrePages/IndexGenre.razor
@@ -2,12 +2,12 @@
 
 <div class="row">
     <div class="col">
-        <h1 class="text-info">Genres</h1>
+        <h1 class="text-info">Transport</h1>
     </div>
 </div>
 <div class="row">
     <div class="col">
-        <a class="btn btn-info" href="/genres/create">Create New Genre</a>
+        <a class="btn btn-info" href="/genres/create">Add New Transport</a>
     </div>
 </div>
 
