--- a/Application.Web.Client/Pages/DeveloperPages/CreateStudioGame.razor
+++ b/Application.Web.Client/Pages/DeveloperPages/CreateStudioGame.razor
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col">
-        <h1 class="text-info">Create Developer Studio</h1>
+        <h1 class="text-info">Add Tour Operator</h1>
     </div>
 </div>
 <div class="row">
