--- a/Application.Web.Client/Shared/NavMenu.razor
+++ b/Application.Web.Client/Shared/NavMenu.razor
@@ -33,7 +33,7 @@
                 </NotAuthorized>
                 <Authorized>
                     <NavLink class="nav-link" href="genres">
-                        <span class="oi oi-aperture" aria-hidden="true"></span> Genre
+                        <span class="oi oi-aperture" aria-hidden="true"></span> Transport
                     </NavLink>
                 </Authorized>
             </AuthorizeView>
@@ -45,7 +45,7 @@
                 </NotAuthorized>
                 <Authorized>
                     <NavLink class="nav-link" href="studio">
-                        <span class="oi oi-action-redo" aria-hidden="true"></span> Studio
+                        <span class="oi oi-action-redo" aria-hidden="true"></span> Tour Operator
                     </NavLink>
                 </Authorized>
             </AuthorizeView>
@@ -56,7 +56,7 @@
                 </NotAuthorized>
                 <Authorized>
                     <NavLink class="nav-link" href="games/search">
-                        <span class="oi oi-signal" aria-hidden="true"></span> Game Search
+                        <span class="oi oi-signal" aria-hidden="true"></span> Tour Search
                     </NavLink>
                 </Authorized>
             </AuthorizeView>
@@ -67,7 +67,7 @@
                 </NotAuthorized>
                 <Authorized>
                     <NavLink class="nav-link" href="games/create">
-                        <span class="oi oi-puzzle-piece" aria-hidden="true"></span> Create New Game
+                        <span class="oi oi-puzzle-piece" aria-hidden="true"></span> Create New Tour
                     </NavLink>
                 </Authorized>
             </AuthorizeView>
