--- a/Application.Web.Client/Pages/GamePages/CreateGame.razor
+++ b/Application.Web.Client/Pages/GamePages/CreateGame.razor
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col">
-        <h1 class="text-info text-center text-uppercase ">Create Game</h1>
+        <h1 class="text-info text-center text-uppercase ">Add Tour</h1>
     </div>
 </div>
 
