--- a/Application.Web.Client/Pages/DeveloperPages/CreateStudioGame.razor
+++ b/Application.Web.Client/Pages/DeveloperPages/CreateStudioGame.razor
@@ -1,4 +1,4 @@
-﻿@page "/studio/create"
+﻿@page "/touroperator/create"
 @using Application.Web.Client.Data.Repository
 
 @inject NavigationManager navManager
