--- a/Application.Web.Client/Pages/GamePages/CreateGame.razor
+++ b/Application.Web.Client/Pages/GamePages/CreateGame.razor
@@ -1,4 +1,4 @@
-﻿@page "/games/create"
+﻿@page "/tours/create"
 @using Application.Web.Client.Data.Repository
 
 @inject NavigationManager navManager
