--- a/Application.Web.Client/Pages/GamePages/EditGame.razor
+++ b/Application.Web.Client/Pages/GamePages/EditGame.razor
@@ -1,4 +1,4 @@
-﻿@page "/games/edit/{GameId:int}"
+﻿@page "/tours/edit/{GameId:int}"
 @using Application.Web.Client.Data.Repository
 @inject IRepository _db
 
