--- a/Application.Web.Client/Pages/GenrePages/CreateGenre.razor
+++ b/Application.Web.Client/Pages/GenrePages/CreateGenre.razor
@@ -1,4 +1,4 @@
-﻿@page "/genres/create"
+﻿@page "/transport/create"
 @using Application.Database.Models
 @using Application.Database
 @using Application.Web.Client.Data.Repository
