--- a/Application.Web.Client/Pages/GenrePages/EditGenre.razor
+++ b/Application.Web.Client/Pages/GenrePages/EditGenre.razor
@@ -1,4 +1,4 @@
-﻿@page "/genres/edit/{GenreId:int}"
+﻿@page "/transport/edit/{GenreId:int}"
 @using Application.Web.Client.Data.Repository
 @inject IRepository _db
 
