--- a/Application.Web.Client/Pages/GenrePages/IndexGenre.razor
+++ b/Application.Web.Client/Pages/GenrePages/IndexGenre.razor
@@ -1,4 +1,4 @@
-﻿@page "/genres"
+﻿@page "/transport"
 
 <div class="row">
     <div class="col">
@@ -7,7 +7,7 @@
 </div>
 <div class="row">
     <div class="col">
-        <a class="btn btn-info" href="/genres/create">Add New Transport</a>
+        <a class="btn btn-info" href="/transport/create">Add New Transport</a>
     </div>
 </div>
 
