--- a/Application.Web.Client/Shared/NavMenu.razor
+++ b/Application.Web.Client/Shared/NavMenu.razor
@@ -32,7 +32,7 @@
 
                 </NotAuthorized>
                 <Authorized>
-                    <NavLink class="nav-link" href="genres">
+                    <NavLink class="nav-link" href="transport">
                         <span class="oi oi-aperture" aria-hidden="true"></span> Transport
                     </NavLink>
                 </Authorized>
@@ -44,7 +44,7 @@
 
                 </NotAuthorized>
                 <Authorized>
-                    <NavLink class="nav-link" href="studio">
+                    <NavLink class="nav-link" href="touroperator">
                         <span class="oi oi-action-redo" aria-hidden="true"></span> Tour Operator
                     </NavLink>
                 </Authorized>
@@ -55,7 +55,7 @@
                 <NotAuthorized>
                 </NotAuthorized>
                 <Authorized>
-                    <NavLink class="nav-link" href="games/search">
+                    <NavLink class="nav-link" href="tours/search">
                         <span class="oi oi-signal" aria-hidden="true"></span> Tour Search
                     </NavLink>
                 </Authorized>
@@ -66,7 +66,7 @@
                 <NotAuthorized>
                 </NotAuthorized>
                 <Authorized>
-                    <NavLink class="nav-link" href="games/create">
+                    <NavLink class="nav-link" href="tours/create">
                         <span class="oi oi-puzzle-piece" aria-hidden="true"></span> Create New Tour
                     </NavLink>
                 </Authorized>
