--- a/Application.Web.Client/Pages/DeveloperPages/IndexStudio.razor
+++ b/Application.Web.Client/Pages/DeveloperPages/IndexStudio.razor
@@ -1,11 +1,11 @@
-﻿@page "/studio"
+﻿@page "/touroperator"
 
 <div class="row border border-info">
     <div class="col">
         <h1 class="text-info">Tour Operators</h1>
     </div>
     <div class="col-3 text-right">
-        <NavLink class="btn btn-info mt-2" href="studio/create">Create New Tour Operator</NavLink>
+        <NavLink class="btn btn-info mt-2" href="touroperator/create">Create New Tour Operator</NavLink>
     </div>
 </div>
 <div class="row">
