--- a/Application.Web.Client/Pages/GamePages/GameDetails.razor
+++ b/Application.Web.Client/Pages/GamePages/GameDetails.razor
@@ -1,9 +1,9 @@
-﻿@page "/games/{GameId:int}"
-@page "/games/{GameId:int}/{GameName}"
+﻿@page "/tours/{GameId:int}"
+@page "/tours/{GameId:int}/{GameName}"
 
 
 
-<h3>GameDetails</h3>
+<h3>TourDetails</h3>
 <div class="form-group">
     <label>GameId: </label>
     <div>
@@ -11,7 +11,7 @@
     </div>
 </div>
 <div class="form-group">
-    <label>GameName: </label>
+    <label>TourName: </label>
     <div>
         <label>@GameName</label>
     </div>
